--- a/HTML/contato.html
+++ b/HTML/contato.html
@@ -4,26 +4,26 @@
     <head>
         <meta charset="UTF-8">
         <title>Contato - Barbearia Alura</title>
-        <link rel="stylesheet" href="/CSS/reset.css">
-        <link rel="stylesheet" href="/CSS/style.css">
+        <link rel="stylesheet" href="../CSS/reset.css">
+        <link rel="stylesheet" href="../CSS/style.css">
     </head>
 
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="/Images/logo.png" alt="Logo da barbearia Alura"></h1>
+                <h1><img src="../Images/logo.png" alt="Logo da barbearia Alura"></h1>
 
                 <nav>
                     <ul>
-                        <li><a href="/HTML/index.html">Home</a></li>
-                        <li><a href="/HTML/produtos.html">Produtos</a></li>
-                        <li><a href="/HTML/contato.html">Contato</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
 
-        <main>
+        <main class="caixa">
             <form>
                 <label for="namesurname">Nome e sobrenome</label>
                 <input type="text" id="namesurname" class="standard-input" required>
@@ -87,7 +87,7 @@
         </main>
 
         <footer>
-            <img src="/Images/logo-branco.png" alt="Logo da barbearia Alura">
+            <img src="../Images/logo-branco.png" alt="Logo da barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
         </footer>
     </body>
