--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="/CSS/reset.css">
-        <link rel="stylesheet" href="/CSS/style.css">
+        <link rel="stylesheet" href="../CSS/reset.css">
+        <link rel="stylesheet" href="../CSS/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -15,25 +15,25 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="/Images/logo.png" alt="Logo da barbearia Alura"></h1>
+                <h1><img src="../Images/logo.png" alt="Logo da barbearia Alura"></h1>
 
                 <nav>
                     <ul>
-                        <li><a href="/HTML/index.html">Home</a></li>
-                        <li><a href="/HTML/produtos.html">Produtos</a></li>
-                        <li><a href="/HTML/contato.html">Contato</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
 
-        <img class="banner"; src="/Images/banner.jpg">
+        <img class="banner"; src="../Images/banner.jpg">
 
         <main>
             <section class="principal">
                 <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-                <img class="utensilios" src="/Images/utensilios.jpg" alt="utensilios de barbearia">
+                <img class="utensilios" src="../Images/utensilios.jpg" alt="utensilios de barbearia">
 
                 <p>Localizada no coração da cidade a Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a <strong>Barbearia Alura</strong> já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -64,7 +64,7 @@
                         <li class="itens">Profissionais qualificados</li>
                         <li class="itens">Profissionais</li>
                         <li class="itens">Limpeza</li>
-                    </ul><img class="imagem-beneficios"; src="/Images/beneficios.jpg">
+                    </ul><img class="imagem-beneficios"; src="../Images/beneficios.jpg">
                 </div>
 
                 <div class="video">
@@ -74,7 +74,7 @@
         </main>
 
         <footer>
-            <img src="/Images/logo-branco.png" alt="Logo da barbearia Alura">
+            <img src="../Images/logo-branco.png" alt="Logo da barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
         </footer>
     </body>
