--- a/HTML/produtos.html
+++ b/HTML/produtos.html
@@ -4,20 +4,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Produtos - Barbearia Alura</title>
-        <link rel="stylesheet" href="/CSS/reset.css">
-        <link rel="stylesheet" href="/CSS/style.css">
+        <link rel="stylesheet" href="../CSS/reset.css">
+        <link rel="stylesheet" href="../CSS/style.css">
     </head>
 
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="/Images/logo.png"></h1>
+                <h1><img src="../Images/logo.png"></h1>
 
                 <nav>
                     <ul>
-                        <li><a href="/HTML/index.html">Home</a></li>
-                        <li><a href="/HTML/produtos.html">Produtos</a></li>
-                        <li><a href="/HTML/contato.html">Contato</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </div>
@@ -27,19 +27,19 @@
             <ul class="products">
                 <li>
                     <h2>Cabelo</h2>
-                    <img src="/Images/cabelo.jpg">
+                    <img src="../Images/cabelo.jpg">
                     <p class="product-description">Na tesoura ou máquina, como o cliente preferir</p>
                     <p class="product-price">R$ 25,00</p>
                 </li>
                 <li>
                     <h2>Barba</h2>
-                    <img src="/Images/barba.jpg">
+                    <img src="../Images/barba.jpg">
                     <p class="product-description">Corte e desenho profissional de barba</p>
                     <p class="product-price">R$ 18,00</p>
                 </li>
                 <li>
                     <h2>Cabelo + Barba</h2>
-                    <img src="/Images/cabelo+barba.jpg">
+                    <img src="../Images/cabelo+barba.jpg">
                     <p class="product-description">Pacote completo de cabelo e barba</p>
                     <p class="product-price">R$ 35, 00</p>
                 </li>
@@ -47,7 +47,7 @@
         </main>
 
         <footer>
-            <img src="/Images/logo-branco.png">
+            <img src="../Images/logo-branco.png">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
         </footer>
     </body>
